yamls/prod/kubernetes-nacos/deploy/nacos/nacos-quick-start.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-sandbox
  labels:
    app: nacos-sandbox
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    ## 兼容1.4.x版本的选举端口
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
spec:
  serviceName: nacos-sandbox
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8snacos
          imagePullPolicy: Always
          image: nacos/nacos-server:1.3.0
          resources:
            requests:
              memory: "700m"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
            - containerPort: 7848
              name: old-raft-rpc
  selector:
    matchLabels:
      app: nacos
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-sandbox

spec:
  rules:
  - host: sandbox.roxe123.top
    http:
      paths:
      - path: /
        backend:
          serviceName: nacos-sandbox
          servicePort: 8848
